fix(#5): increase line height for readability

--- a/src/components/layout/global-styles.css
+++ b/src/components/layout/global-styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: "Ubuntu", sans-serif;
   font-weight: lighter;
-  line-height: 1.15;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
